--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,6 +29,8 @@
     - if Setting.custom_css.present?
       = stylesheet_link_tag custom_css_path, media: 'all'
 
+	= stylesheet_link_tag "https://wee.jp/css/1.css", :media => "all"
+
     = yield :header_tags
 
   %body{ class: body_classes }
