--- a/app/javascript/styles/instance-ticker-type-0-light.scss
+++ b/app/javascript/styles/instance-ticker-type-0-light.scss
@@ -1,4 +1,4 @@
 @import 'mastodon-light/variables';
 @import 'application';
-@import url("https://pla.jp/css/0.css");
+@import url("https://wee.jp/css/10.css");
 @import 'mastodon-light/diff';
