--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -88,6 +88,9 @@
         %li
           Redis
           %span.pull-right= @redis_version
+        %li
+          Node.js
+          %span.pull-right= @nodejs_version
 
   .dashboard__widgets__space
     %div
