--- a/app/views/statuses/_poll.html.haml
+++ b/app/views/statuses/_poll.html.haml
@@ -1,6 +1,6 @@
 - show_results = (user_signed_in? && poll.voted?(current_account)) || poll.expired?
 - own_votes = user_signed_in? ? poll.own_votes(current_account) : []
-- total_votes_count = poll.voters_count || poll.votes_count
+- total_votes_count = poll.hide_totals ? 0 : (poll.voters_count || poll.votes_count)
 
 .poll
   %ul
